--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@isamrish/gatsby-plugin-google-adsense": "^1.0.2",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.4",
